--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.1.3
   image_picker: ^1.1.2
+  flutter_map: ^8.1.1
+  flutter_local_notifications: ^19.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,7 +68,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
+    - assets/tempat_ibadah.geojson
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
