--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,15 @@ dependencies:
   flutter_map: ^8.1.1
   flutter_local_notifications: ^19.2.1
   location: ^8.0.0 
+  google_nav_bar: ^5.0.7
+  google_generative_ai: ^0.4.7 
+  flutter_dotenv: ^5.2.1
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  chat_bubbles: ^1.7.0
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +77,7 @@ flutter:
   assets:
     - assets/
     - assets/tempat_ibadah.geojson
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
