--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_nav_bar: ^5.0.7
   google_generative_ai: ^0.4.7 
   flutter_dotenv: ^5.2.1
+  timezone: ^0.10.1
   
 
   # The following adds the Cupertino Icons font to your application.
