--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   google_generative_ai: ^0.4.7 
   flutter_dotenv: ^5.2.1
   timezone: ^0.10.1
-  
+  lottie: ^3.3.1 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
