--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   flutter_dotenv: ^5.2.1
   timezone: ^0.10.1
   lottie: ^3.3.1 
+  flutter_lints: ^5.0.0
+  fl_chart: ^1.0.0
+  url_launcher: ^6.3.1
+  cached_network_image: ^3.4.1
+  intl: ^0.20.2 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -61,7 +66,6 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
