--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,10 @@ dependencies:
   fl_chart: ^1.0.0
   url_launcher: ^6.3.1
   cached_network_image: ^3.4.1
-  intl: ^0.20.2 
+  intl: ^0.20.2
+  sensors_plus: ^6.1.1
+  proximity_sensor: ^1.3.8
+  flutter_compass: ^0.8.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
