--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   sensors_plus: ^6.1.1
   proximity_sensor: ^1.3.8
   flutter_compass: ^0.8.1
-
+  light_sensor: ^3.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
