--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   chat_bubbles: ^1.7.0
   connectivity_plus: ^6.1.4
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
