--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.USE_SENSOR" />
     <application
-        android:label="projek_akhir_teori"
+        android:label="lurufa"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
