--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,10 +52,10 @@ dependencies:
   sensors_plus: ^6.1.1
   proximity_sensor: ^1.3.8
   flutter_compass: ^0.8.1
-  light_sensor: ^3.0.1
   chat_bubbles: ^1.7.0
   connectivity_plus: ^6.1.4
   crypto: ^3.0.6
+  flutter_launcher_icons: ^0.14.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -72,6 +72,11 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo_utama.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
