--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_map: ^8.1.1
   flutter_local_notifications: ^19.2.1
   location: ^8.0.0 
+  latlong2: ^0.9.1
   google_nav_bar: ^5.0.7
   google_generative_ai: ^0.4.7 
   flutter_dotenv: ^5.2.1
