--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   connectivity_plus: ^6.1.4
   crypto: ^3.0.6
   flutter_launcher_icons: ^0.14.3
+  animated_text_kit: ^4.2.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
